--- a/src/components/all.sass
+++ b/src/components/all.sass
@@ -1,11 +1,11 @@
 @import "~bulma/sass/utilities/initial-variables"
 
 // Config vars
-$kaldi-red: #FD461E
-$kaldi-red-invert: #fff
+$danielrvt-main: #008B8B
+$danielrvt-main-invert: #FFFFFF
 
-$primary: $kaldi-red
-$primary-invert: $kaldi-red-invert
+$primary: $danielrvt-main
+$primary-invert: $danielrvt-main-invert
 
 .content .taglist
   list-style: none
